start fix product ui

--- a/WebApplication2/WebApplication2/Views/Categories/Details.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Details.cshtml
@@ -39,7 +39,7 @@
     }
 </div>
 <div>
-    <a asp-action="Index">חזור לקטגוריות</a>
+    <a class="btn btn-secondary" asp-action="Index">חזור</a>
 </div>
 
 <style>
