--- a/WebApplication2/WebApplication2/Views/Orders/Delete.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Delete.cshtml
@@ -35,7 +35,7 @@
                 }
             </div>
         </div>
-        <form class="" asp-action="Delete">
+        <form asp-action="Delete">
             <input type="hidden" asp-for="Id" />
             <input type="submit" value="מחק" class="btn btn-danger delete" />
             <a asp-action="Index" class="btn btn-secondary">ביטול</a>
