--- a/WebApplication2/WebApplication2/Views/Products/Details.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Details.cshtml
@@ -5,27 +5,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1>פרטים</h1>
 
 <div>
-    <h4>Product</h4>
+    <h4>מוצר</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-    </dl>
+    <div class="item-detailes">
+        <div>
+            <span class="description">@Html.DisplayNameFor(model => model.Name)</span>:
+            <span>@Html.DisplayFor(model => model.Name)</span>
+        </div>
+        <div>
+            <span class="description">@Html.DisplayNameFor(model => model.Price)</span>:
+            <span>@Html.DisplayFor(model => model.Price)</span>
+        </div>
+    </div>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.Id">עריכה</a>
+    <a class="btn btn-secondary" asp-action="Index">חזור</a>
 </div>
+
+<style>
+    .item-detailes {
+        font-size: 20px;
+        font-weight: 500;
+    }
+</style>
