--- a/WebApplication2/WebApplication2/Views/Products/Edit.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Edit.cshtml
@@ -24,16 +24,25 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group action-buttons">
+                <input type="submit" value="שמור" class="btn btn-primary save" />
+                <div>
+                    <a class="btn btn-secondary" asp-action="Index">ביטול</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<style>
+    .action-buttons {
+        display: flex;
+    }
+
+    .save {
+        margin-left: 10px;
+    }
+</style>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
