--- a/WebApplication2/WebApplication2/Views/productImages/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Index.cshtml
@@ -5,32 +5,23 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>תמונת מוצרים</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">צור חדש</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-			<td>
-				<img class="category-image" src="/@item.Image" />
-			</td>
-            <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |*@
-                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> | *@ 
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+    @foreach (var item in Model) {
+        <div>
+            <img class="category-image" src="/@item.Image" />
+            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">מחיקה</a>
+        </div>
+    }
 </table>
+
+<style>
+    .category-image {
+        width: 200px;
+        margin-left: 20px;
+    }
+</style>
