--- a/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Categories/Index.cshtml
@@ -11,7 +11,7 @@
 @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
 {
     <p style="text-align: right;">
-        <a class="button big" asp-action="Create">צור קטגוריה חדשה</a>
+        <a class="btn btn-primary" asp-action="Create">צור קטגוריה חדשה</a>
     </p>
 }
 <div class="categories">
@@ -29,8 +29,8 @@
             <div class="action-buttons">
                 @if (User.Identity.IsAuthenticated && User.IsInRole(nameof(TypeUser.admin)))
                 {
-                    <a class="button" asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
-                    <a class="button" asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
+                    <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.CategoryId">עריכה</a>
+                    <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.CategoryId">מחיקה</a>
                 }
             </div>
         </div>
@@ -90,24 +90,6 @@
         max-height: 200px;
         width: 250px;
     }
-
-    .button {
-        color: white;
-        padding: 2px 6px;
-        background: #0078fa;
-        border-radius: 15px;
-        text-decoration: none;
-    }
-
-        .button:hover {
-            color: white;
-            background: #0056b3;
-            text-decoration: none;
-        }
-
-        .button.big {
-            padding: 7px 10px;
-        }
 
     tr {
         text-align: right;
