--- a/WebApplication2/WebApplication2/Views/Orders/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Create.cshtml
@@ -20,24 +20,33 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-				<select asp-for="Status" class="form-control">
-					<option value="@OrderStatuses.OPEN">פתוח</option>
-					<option value="@OrderStatuses.WAITING">ממתין לטיפול</option>
-					<option value="@OrderStatuses.IN_PROCESS">בטיפול</option>
-					<option value="@OrderStatuses.CLOSE">סגור</option>
-				</select>
+                <select asp-for="Status" class="form-control">
+                    <option value="@OrderStatuses.OPEN">פתוח</option>
+                    <option value="@OrderStatuses.WAITING">ממתין לטיפול</option>
+                    <option value="@OrderStatuses.IN_PROCESS">בטיפול</option>
+                    <option value="@OrderStatuses.CLOSE">סגור</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group action-buttons">
+                <input type="submit" value="יצירה" class="btn btn-primary save" />
+                <div>
+                    <a class="btn btn-secondary" asp-action="Index">ביטול</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<style>
+    .action-buttons {
+        display: flex;
+    }
+
+    .save {
+        margin-left: 10px;
+    }
+</style>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
