--- a/WebApplication2/WebApplication2/Views/Products/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/Products/Create.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>יצירה</h1>
 
-<h4>Product</h4>
+<h4>מוצר</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,16 +23,25 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group action-buttons">
+                <input type="submit" value="שמור" class="btn btn-primary save" />
+                <div>
+                    <a class="btn btn-secondary" asp-action="Index">ביטול</a>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+<style>
+    .action-buttons {
+        display: flex;
+    }
+
+    .save {
+        margin-left: 10px;
+    }
+</style>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
