--- a/WebApplication2/WebApplication2/Views/Orders/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Orders/Index.cshtml
@@ -1,53 +1,64 @@
 ﻿@model IEnumerable<WebApplication2.Models.Order>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>הזמנות</h1>
 
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @switch (item.Status)
-				{
-                    case OrderStatuses.OPEN:
-                        <span>פתוח</span>
-                            break;
-                    case OrderStatuses.WAITING:
-                        <span>ממתין לטיפול</span>
-                            break;
-                    case OrderStatuses.IN_PROCESS:
-                        <span>בטיפול</span>
-                            break;
-                    case OrderStatuses.CLOSE:
-                        <span>סגור</span>
-                            break;
-				}
-            </td>
-            <td>
-                <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">עריכה</a>
-                <a class="btn btn-secondary btn-sm" asp-action="Details" asp-route-id="@item.Id">פרטים</a> 
-                <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">מחיקה</a>
-            </td>
-        </tr>
-}
-    </tbody>
+	<thead>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Id)
+			</th>
+			<th>שם משתמש</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Total)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Status)
+			</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		@foreach (var item in ViewBag.OrdersList)
+		{
+			<tr>
+				<td>
+					@item.Id
+				</td>
+				<td>
+					@item.ClientName
+				</td>
+				<td>
+					@item.Total
+				</td>
+				<td>
+					@switch (item.Status)
+					{
+						case OrderStatuses.OPEN:
+							<span>פתוח</span>
+							break;
+						case OrderStatuses.WAITING:
+							<span>ממתין לטיפול</span>
+							break;
+						case OrderStatuses.IN_PROCESS:
+							<span>בטיפול</span>
+							break;
+						case OrderStatuses.CLOSE:
+							<span>סגור</span>
+							break;
+					}
+				</td>
+				<td>
+					<a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">עריכה</a>
+					<a class="btn btn-secondary btn-sm" asp-action="Details" asp-route-id="@item.Id">פרטים</a>
+					<a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">מחיקה</a>
+				</td>
+			</tr>
+		}
+	</tbody>
 </table>
