added photo for home

--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <center>
+        <h1 class="display-4">ברוכים הבאים</h1>
+    </center>
+    <img src="/images/images.jpg" width="668" height="368" alt="דף הבית" />
 </div>
