--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -1,8 +1,53 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<WebApplication2.Models.productImage>
+
+@{
+	ViewData["Title"] = "עמוד הבית";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">הקינוחייה</h1>
+	<h4>אצלנו תמצאו את הקינוחים הטובים ביותר !</h4>
 </div>
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="2000">
+	<div class="carousel-inner">
+		@foreach (productImage product in Model)
+		{
+			<div class="carousel-item">
+				<img class="d-block w-100" src="@product.Image" alt="slide">
+			</div>
+		}
+	</div>
+	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		<span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+		<span class="sr-only">Next</span>
+	</a>
+</div>
+
+
+@section css
+{
+	<style>
+		.carousel {
+			width: 500px;
+			margin: auto;
+			margin-top: 60px;
+		}
+	</style>
+}
+
+@section Scripts
+	{
+		<script>
+			$('.carousel').carousel();
+			$('.carousel-item:first-child').addClass('active');
+
+			if (@ViewBag.isFinishOrder)
+				alert('הזמנתך התקבלה ותטופל בהקדם');
+
+		</script>
+}
