--- a/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/WebApplication2/Views/Shared/_Layout.cshtml
@@ -1,16 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WebApplication2</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <style>
-        * {
-             text-align: right;
-        }
-    </style>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - WebApplication2</title>
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" />
+	<style>
+		* {
+			text-align: right;
+		}
+	</style>
+	@await RenderSectionAsync("css", required: false)
 </head>
 <body>
     <header>
@@ -88,7 +89,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - WebApplication2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - הקינוחיה - <a asp-area="" asp-controller="Home" asp-action="Privacy">הצהרת פרטיות</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
