--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
 			$('.carousel-item:first-child').addClass('active');
 
 			if (@ViewBag.isFinishOrder)
-				alert('הזמנתך התקבלה ותטופל בהקדם');
+				$.notify('הזמנתך התקבלה ותטופל בהקדם', "success");
 
 		</script>
 }
