--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-	<h1 class="display-4">הקינוחייה</h1>
+	<h1 class="display-4">הקינוחיה</h1>
 	<h4>אצלנו תמצאו את הקינוחים הטובים ביותר !</h4>
 </div>
 
@@ -14,7 +14,7 @@
 		@foreach (productImage product in Model)
 		{
 			<div class="carousel-item">
-				<img class="d-block w-100" src="@product.Image" alt="slide">
+				<img class="d-block w-100" src="/@product.Image" alt="slide">
 			</div>
 		}
 	</div>
