--- a/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
+++ b/WebApplication2/WebApplication2/Views/productImages/Create.cshtml
@@ -1,15 +1,15 @@
 ﻿@model WebApplication2.Models.productImage
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "הוספת תמונה";
 }
 
-<h1>Create</h1>
+<h1>הוספת תמונה</h1>
 
-<h4>productImage</h4>
+@*<h4>productImage</h4>*@
 <hr />
 <div class="row">
-    <div class="col-md-4">
+	<div class="col-md-4">
 		<form enctype="multipart/form-data" asp-action="Create">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="form-group">
@@ -23,16 +23,16 @@
 
 			<select class="form-control" asp-for="_ProductId" asp-items="ViewBag.Products"></select>
 			<div class="form-group">
-				<input type="submit" value="Create" class="btn btn-primary" />
+				<input type="submit" value="הוסף" class="btn btn-primary mt-3" />
 			</div>
 		</form>
-    </div>
+	</div>
 </div>
 
 <div>
-	<a asp-controller="Product" asp-action="Index">Back to List</a>
+	<a asp-controller="Products" asp-action="Index">חזרה לרשימת מוצרים</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
