--- a/WebApplication2/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/WebApplication2/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
 		<span class="sr-only">Next</span>
 	</a>
 </div>
+<p>טמפרטורה נוכחית: <span id="temp"></span></p>
 
 
 @section css
@@ -48,6 +49,16 @@
 
 			if (@ViewBag.isFinishOrder)
 				$.notify('הזמנתך התקבלה ותטופל בהקדם', "success");
+
+
+			$.ajax({
+				url: "https://api.openweathermap.org/data/2.5/onecall?lat=34.908889942787724&lon=32.06398536744788&appid=3fa7f6b3d3dc091c139167e6fbd2a092&units=metric",
+				type: "GET",
+				success: function (res) {
+					console.log(res.current.temp);
+					$('#temp')[0].innerText = res.current.temp;
+				}
+			});
 
 		</script>
 }
